--- a/PC_APP/InstruLab/InstruLab/InstruLab.csproj
+++ b/PC_APP/InstruLab/InstruLab/InstruLab.csproj
@@ -8,13 +8,13 @@
     <ProjectGuid>{E9C5E1C3-D9A4-43C4-80C9-052EF872CAAD}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InstruLab</RootNamespace>
-    <AssemblyName>InstruLab</AssemblyName>
+    <RootNamespace>LEO</RootNamespace>
+    <AssemblyName>Little Embedded Oscilloscope</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\inst\</PublishUrl>
+    <PublishUrl>C:\insta\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -24,7 +24,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>2.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -64,9 +64,7 @@
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <SignManifests>false</SignManifests>
   </PropertyGroup>
@@ -74,7 +72,10 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>InstrulabLogo.ico</ApplicationIcon>
+    <ApplicationIcon>LEO-logo_small.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -192,10 +193,11 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\logo_cvut_vertical_tiny.png" />
+    <EmbeddedResource Include="Resources\logo_2_tiny.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="InstrulabLogo.ico" />
+    <Content Include="LEO-logo_small.ico" />
+    <Content Include="Resources\logo_cvut_vertical_tiny.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
