Some bugs - minor changes

--- a/PC_APP/InstruLab/InstruLab/InstruLab.csproj
+++ b/PC_APP/InstruLab/InstruLab/InstruLab.csproj
@@ -116,6 +116,7 @@
     <Compile Include="feedback.Designer.cs">
       <DependentUpon>feedback.cs</DependentUpon>
     </Compile>
+    <Compile Include="FW_version.cs" />
     <Compile Include="Instrulab.cs">
       <SubType>Form</SubType>
     </Compile>
