--- a/V2/Projects/STM32F303 Nucleo/Instrulab_F303_Nucleo.uvprojx
+++ b/V2/Projects/STM32F303 Nucleo/Instrulab_F303_Nucleo.uvprojx
@@ -371,7 +371,7 @@
             <vShortWch>0</vShortWch>
             <VariousControls>
               <MiscControls>--C99</MiscControls>
-              <Define>USE_HAL_DRIVER,STM32F303xx,ARM_MATH_CM4,USE_GEN,USE_SCOPE</Define>
+              <Define>USE_HAL_DRIVER,STM32F303xx,ARM_MATH_CM4,USE_GEN,USE_SCOPE,USE_SHIELD</Define>
               <Undefine></Undefine>
               <IncludePath>Inc;..\..\Drivers\STM32F3xx_HAL_Driver\Inc;..\..\Middlewares\ST\STM32_USB_Device_Library\Core\Inc;..\..\Middlewares\ST\STM32_USB_Device_Library\Class\CDC\Inc;..\..\Drivers\CMSIS\Include;..\..\Drivers\CMSIS\Device\ST\STM32F3xx\Include;..\..\Middlewares\Third_Party\FreeRTOS\Source\portable\RVDS\ARM_CM4F;..\..\Middlewares\Third_Party\FreeRTOS\Source\include;..\..\Middlewares\Third_Party\FreeRTOS\Source\CMSIS_RTOS;..\..\Common;..\..\Drivers\BSP\STM32F3xx-Nucleo</IncludePath>
             </VariousControls>
