--- a/PC_APP/InstruLab/InstruLab/InstruLab.csproj
+++ b/PC_APP/InstruLab/InstruLab/InstruLab.csproj
@@ -168,6 +168,7 @@
     </Compile>
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ArbDialog.resx">
       <DependentUpon>ArbDialog.cs</DependentUpon>
