--- a/PC_APP/InstruLab/InstruLab/InstruLab.csproj
+++ b/PC_APP/InstruLab/InstruLab/InstruLab.csproj
@@ -146,6 +146,12 @@
     <Compile Include="Message.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PwmGenerator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PwmGenerator.Designer.cs">
+      <DependentUpon>PwmGenerator.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reporting.cs" />
     <Compile Include="Scope.cs">
       <SubType>Form</SubType>
@@ -198,6 +204,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="PwmGenerator.resx">
+      <DependentUpon>PwmGenerator.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Scope.resx">
       <DependentUpon>Scope.cs</DependentUpon>
     </EmbeddedResource>
