--- a/V2/Projects/STM32F303 Nucleo/Instrulab_F303_Nucleo.uvprojx
+++ b/V2/Projects/STM32F303 Nucleo/Instrulab_F303_Nucleo.uvprojx
@@ -333,7 +333,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls>--C99</MiscControls>
-              <Define>USE_HAL_DRIVER,STM32F303xx,ARM_MATH_CM4,USE_GEN,USE_COUNTER,USE_SCOPE,USE_SHIELD</Define>
+              <Define>USE_HAL_DRIVER,STM32F303xx,ARM_MATH_CM4,USE_GEN,USE_GEN_PWM,USE_COUNTER,USE_SCOPE,USE_SHIELD</Define>
               <Undefine></Undefine>
               <IncludePath>Inc;..\..\Drivers\STM32F3xx_HAL_Driver\Inc;..\..\Middlewares\ST\STM32_USB_Device_Library\Core\Inc;..\..\Middlewares\ST\STM32_USB_Device_Library\Class\CDC\Inc;..\..\Drivers\CMSIS\Include;..\..\Drivers\CMSIS\Device\ST\STM32F3xx\Include;..\..\Middlewares\Third_Party\FreeRTOS\Source\portable\RVDS\ARM_CM4F;..\..\Middlewares\Third_Party\FreeRTOS\Source\include;..\..\Middlewares\Third_Party\FreeRTOS\Source\CMSIS_RTOS;..\..\Common;..\..\Drivers\BSP\STM32F3xx-Nucleo</IncludePath>
             </VariousControls>
@@ -653,6 +653,11 @@
               <FileName>counter.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\Common\counter.c</FilePath>
+            </File>
+            <File>
+              <FileName>gen_pwm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Common\gen_pwm.c</FilePath>
             </File>
           </Files>
         </Group>
