Counters, PWM gen, Sync PWM gen
Three functionalites done. There are two major bugs:

1) PWM gen - duty cycle of PWM does not change (DMA transf. problem) if
DAC generator was started before.

2) Sync PWM gen - functional until oscilloscope is started. Once the
scope was started the syncPwmChannelx buffer (2 values to change CCR
register to generate pulse during period) is always overwritten by the
value that is initialized in MX_TIM8_SYNC_PWM_Init function in
sConfigOC.Pulse param.

--- a/PC_APP/InstruLab/InstruLab/InstruLab.csproj
+++ b/PC_APP/InstruLab/InstruLab/InstruLab.csproj
@@ -115,11 +115,11 @@
     </Compile>
     <Compile Include="Commands.cs" />
     <Compile Include="Comms_thread.cs" />
-    <Compile Include="counter.cs">
+    <Compile Include="Counter.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="counter.Designer.cs">
-      <DependentUpon>counter.cs</DependentUpon>
+    <Compile Include="Counter.Designer.cs">
+      <DependentUpon>Counter.cs</DependentUpon>
     </Compile>
     <Compile Include="Device.cs" />
     <Compile Include="feedback.cs">
@@ -187,8 +187,8 @@
     <EmbeddedResource Include="BodePlot.resx">
       <DependentUpon>BodePlot.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="counter.resx">
-      <DependentUpon>counter.cs</DependentUpon>
+    <EmbeddedResource Include="Counter.resx">
+      <DependentUpon>Counter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="feedback.resx">
       <DependentUpon>feedback.cs</DependentUpon>
